--- a/Omal/Views/AnagraficaClientiV.xaml
+++ b/Omal/Views/AnagraficaClientiV.xaml
@@ -20,7 +20,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
              <Image Grid.Row="0" Grid.RowSpan="3"  Aspect="AspectFill" Source="IMG06837.png" Opacity="0.3" />
-            <CControls:CualevaRoundedEntry Margin="5" HeightRequest="50"  VerticalOptions="Center" Style="{StaticResource cerca}" 
+            <CControls:CualevaRoundedEntry PlaceholderColor="White" Margin="5" HeightRequest="50"  VerticalOptions="Center" Style="{StaticResource cerca}" 
                                            Grid.Row="1"  TextColor="White"   
                                            Placeholder="{Binding ClienteRicercato}" Text="{Binding SearchText}"  />   
             <ListView x:Name="ListaClienti" HorizontalOptions="Fill" VerticalOptions="Fill" Grid.Row="3" 
@@ -31,7 +31,7 @@
                       GroupDisplayBinding="{Binding Titolo}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding RagioneSociale}" Detail="{Binding CittaProvinciaNazione}" >
+                    <TextCell Text="{Binding RagioneSociale}" >
                             <TextCell.ContextActions>
                                 <MenuItem 
                                         Text="{Binding Path=BindingContext.StrElimina, Source={Common:ElementSource AnagraficaClientiV}}" 
