--- a/Omal/Views/OrdersV.xaml
+++ b/Omal/Views/OrdersV.xaml
@@ -19,12 +19,12 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
              <Image Grid.Row="0" Grid.RowSpan="3"  Aspect="AspectFill" Source="IMG06837.png" Opacity="0.3" />
-            <CControls:CualevaRoundedEntry Margin="5" HeightRequest="50"  VerticalOptions="Center" Style="{StaticResource cerca}" 
+            <CControls:CualevaRoundedEntry PlaceholderColor="White" Margin="5" HeightRequest="50"  VerticalOptions="Center" Style="{StaticResource cerca}" 
                                            Grid.Row="1"  TextColor="White"   
                                            Placeholder="{Binding ClienteRicercato}" Text="{Binding SearchText}"  />   
             <ListView x:Name="ListaOrdini" HorizontalOptions="Fill" VerticalOptions="Fill" Grid.Row="3" 
                       SelectedItem="{Binding OrdineSelected}" 
-                      ItemsSource="{Binding Ordini}" >
+                      ItemsSource="{Binding Ordini}"  RowHeight="70" >
             <ListView.ItemTemplate>
                 <DataTemplate>
                         <ViewCell>
