--- a/Omal/App.xaml
+++ b/Omal/App.xaml
@@ -78,6 +78,7 @@
             </Style>
             <Style x:Key="cerca" TargetType="CControls:CualevaRoundedEntry">
                 <Setter Property="TextColor" Value="#FFFFFF" />
+                <Setter Property="FontSize" Value="10" />
                 <Setter Property="Image" Value="omalc2" />
                 <Setter Property="CualevaRoundedEntryBackgroundColor" Value="#60A5D1" />
                 <Setter Property="LeftPadding" Value="5" />
@@ -100,10 +101,8 @@
                 <Setter Property="BorderRadius" Value="10" />
                 <Setter Property="BackgroundColor" Value="Transparent" />
                 <Setter Property="CualevaRoundedEntryBackgroundColor" Value="White" />
-
             </Style>
 
-            
             <Style  TargetType="Button">
                 <Setter Property="BorderWidth" Value="0" />
                 <Setter Property="TextColor" Value="#60A5D1" />
@@ -125,6 +124,29 @@
                 <Setter Property="HorizontalOptions" Value="End" />
                 <Setter Property="FontFamily" Value="{StaticResource BoldFont}" />
             </Style>
+            
+            <Style x:Key="AzzurroNoBold" TargetType="Button">
+                <Setter Property="BorderWidth" Value="0" />
+                <Setter Property="TextColor" Value="#FFFFFF" />
+                <Setter Property="WidthRequest" Value="100" />
+                <Setter Property="BorderRadius" Value="20" />
+                <Setter Property="BackgroundColor" Value="#60A5D1" />
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="HorizontalOptions" Value="End" />
+                <Setter Property="FontFamily" Value="{StaticResource NormalFont}" />
+            </Style>
+
+            <Style x:Key="RossoNoBold" TargetType="Button">
+                <Setter Property="BorderWidth" Value="0" />
+                <Setter Property="TextColor" Value="#FFFFFF" />
+                <Setter Property="WidthRequest" Value="100" />
+                <Setter Property="BorderRadius" Value="20" />
+                <Setter Property="BackgroundColor" Value="Red" />
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="HorizontalOptions" Value="End" />
+                <Setter Property="FontFamily" Value="{StaticResource NormalFont}" />
+            </Style>
+
             <Style TargetType="ListView">
                 <Setter Property="BackgroundColor" Value="#FFFFFF" />
             </Style>
