--- a/Omal/Views/AnagraficaClientiEditDetailV.xaml
+++ b/Omal/Views/AnagraficaClientiEditDetailV.xaml
@@ -24,6 +24,7 @@
         <CControls:CualevaRoundedEntry Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Email}" Placeholder="{Binding StrEmail}"/>
         <CControls:CualevaRoundedEntry Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Telefono}" Placeholder="{Binding StrTelefono}"/>
         <CControls:CualevaRoundedEntry Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Fax}" Placeholder="{Binding StrFax}"/>
+                <Button HorizontalOptions="Fill" Margin="30,5,30,5" IsVisible="{Binding IsInsert, Converter={StaticResource InverseBooleanConverter}}" Style="{StaticResource RossoNoBold}"  Text="{Binding StrElimina, Converter={StaticResource UpperCaseConverter}}" Command="{Binding EliminaCommand}" CommandParameter="{Binding CurCliente}" />
         </StackLayout>
             </ScrollView>
 	</ContentPage.Content>
