--- a/Omal/Views/AnagraficheV.xaml
+++ b/Omal/Views/AnagraficheV.xaml
@@ -22,8 +22,8 @@
             
           <StackLayout WidthRequest="240" VerticalOptions="Center" Padding="6" Orientation="Vertical"  AbsoluteLayout.LayoutBounds="0.5, 0.5, -1, -1" AbsoluteLayout.LayoutFlags="PositionProportional">
                 <Label IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}" Margin="10" HorizontalTextAlignment="Center"  Text="{Binding LogonRichiesto}" />
-                <Button IsVisible="{Binding IsLoggedIn}" HorizontalOptions="Fill" Style="{StaticResource Azzurro}" Text="{Binding BtnClienti, Converter={StaticResource UpperCaseConverter}}" Command="{Binding GoToAnagraficaClientiCommand}" />
-                <Button IsVisible="{Binding IsLoggedIn}" HorizontalOptions="Fill" Style="{StaticResource Azzurro}" Text="{Binding BtnOrdini, Converter={StaticResource UpperCaseConverter}}" Command="{Binding GoToAnagraficaOrdiniCommand}" />
+                <Button IsVisible="{Binding IsLoggedIn}" HorizontalOptions="Fill" Style="{StaticResource AzzurroNoBold}" Text="{Binding BtnClienti, Converter={StaticResource UpperCaseConverter}}" Command="{Binding GoToAnagraficaClientiCommand}" />
+                <Button IsVisible="{Binding IsLoggedIn}" HorizontalOptions="Fill" Style="{StaticResource AzzurroNoBold}" Text="{Binding BtnOrdini, Converter={StaticResource UpperCaseConverter}}" Command="{Binding GoToAnagraficaOrdiniCommand}" />
             </StackLayout>
     </Grid>
   </RelativeLayout>
