--- a/Omal/Views/SearchProductV.xaml
+++ b/Omal/Views/SearchProductV.xaml
@@ -39,12 +39,13 @@
             
         </StackLayout>
         <StackLayout Grid.Row="2" Orientation="Vertical" BackgroundColor="#EAEAEA">
-            <Label Margin="0,10,0,0" HorizontalTextAlignment="Center" Style="{StaticResource Titolo}" Text="{Binding StrTrovaArticolo}" />
+            <ActivityIndicator IsRunning="{Binding IsRunning}" IsVisible="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}" />
+            <Label IsVisible="{Binding IsRunning}" Margin="0,10,0,0" HorizontalTextAlignment="Center" Style="{StaticResource Titolo}" Text="{Binding StrTrovaArticolo}" />
             <CControls:CualevaPicker  Margin="5,0,5,0" Title="{Binding DescrizionePicker1}" IsVisible="{Binding Picker1IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker1}" ItemsSource="{Binding Picker1}"  />
             <CControls:CualevaPicker  Margin="5,0,5,0" Title="{Binding DescrizionePicker2}" IsVisible="{Binding Picker2IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker2}" ItemsSource="{Binding Picker2}"  />
             <CControls:CualevaPicker  Margin="5,0,5,0" Title="{Binding DescrizionePicker3}" IsVisible="{Binding Picker3IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker3}" ItemsSource="{Binding Picker3}"  />
             <CControls:CualevaPicker  Margin="5,0,5,0" Title="{Binding DescrizionePicker4}" IsVisible="{Binding Picker4IsVisible}"  HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker4}" ItemsSource="{Binding Picker4}"  />
-            <StackLayout Margin="5" HorizontalOptions="Center"  Orientation="Horizontal">
+            <StackLayout IsVisible="{Binding TrovaIsVisible}" Margin="5" HorizontalOptions="Center"  Orientation="Horizontal">
                 <Button IsVisible="{Binding Picker2IsVisible}" Text="{Binding StrBtnPulisci, Converter={StaticResource UpperCaseConverter}}" Command="{Binding PulisciCommand}" />                
                 <Button Text="{Binding BtnTrova, Converter={StaticResource UpperCaseConverter}}" Style="{StaticResource Azzurro}" Command="{Binding CercaArticoliCommand}" IsVisible="{Binding MoreThanOneAtrticle}" />                
             </StackLayout>
