--- a/Omal/Views/InfoProductV.xaml
+++ b/Omal/Views/InfoProductV.xaml
@@ -6,7 +6,7 @@
     <ContentPage.Content>
         <StackLayout Orientation="Vertical">
         <StackLayout BackgroundColor="#EAEAEA">
-            <Label Margin="5" Style="{StaticResource Titolo}" FontSize="18" Text="{Binding CurProdotto.nome}"  HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
+            <Label Margin="5" Style="{StaticResource Titolo}" FontSize="18" Text="{Binding CurProdotto, Converter={StaticResource NomeProdottoConverter}}"  HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
         </StackLayout>
             <ListView Margin="5" x:Name="CurGruppo" SelectedItem="{Binding CurGruppoProdotto}" ItemsSource="{Binding GruppoMetadati}">
                  <ListView.RowHeight>
@@ -18,7 +18,7 @@
                     <DataTemplate>
                         <ViewCell>
                             <StackLayout Orientation="Horizontal" Margin="10">
-                                 <Label IsVisible="{Binding LangIsIT}" Text="{Binding gruppo_metadati_it, Converter={StaticResource UpperCaseConverter}}" Margin="5" Style="{StaticResource Azzurra}"  VerticalOptions="Center" />
+                                 <Label IsVisible="{Binding LangIsIT}" Text="{Binding ., Converter={StaticResource GruppoMetadatiConverter}}" Margin="5" Style="{StaticResource Azzurra}"  VerticalOptions="Center" />
 
                                  <Image Source="rightarrow" Margin="5" HorizontalOptions="EndAndExpand"  />
                             </StackLayout>
