--- a/Omal/Views/SearchProductV.xaml
+++ b/Omal/Views/SearchProductV.xaml
@@ -17,7 +17,7 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
         <StackLayout Grid.Row="0" Orientation="Vertical" BackgroundColor="#EAEAEA">
-            <Label Margin="5" Style="{StaticResource Titolo}" FontSize="18" Text="{Binding CurProdotto.nome}"  HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
+            <Label Margin="5" Style="{StaticResource Titolo}" FontSize="18" Text="{Binding CurProdotto, Converter={StaticResource NomeProdottoConverter}}"  HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
         </StackLayout>
         <StackLayout Grid.Row="1" Orientation="Vertical" BackgroundColor="#FFFFFF">
                     <Grid>
