--- a/Omal/Views/OmalContactPageV.xaml
+++ b/Omal/Views/OmalContactPageV.xaml
@@ -18,7 +18,6 @@
             </FormattedString>
           </Label.FormattedText>
         </Label>
-
           <Label HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center">
           <Label.FormattedText>
             <FormattedString>
@@ -37,7 +36,7 @@
             <Label HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center">
           <Label.FormattedText>
             <FormattedString>
-              <Span Text="&#10;SEDE PRODUTTIVA" FontAttributes="Bold"/>
+              <Span Text="aaa" FontAttributes="Bold"/>
               <Span Text="&#10;Via Brognolo 12"  />
               <Span Text="&#10;Passirano" />
                 <Span Text="&#10;Brescia, Italia"  />
