--- a/Omal/Views/WelcomeV.xaml
+++ b/Omal/Views/WelcomeV.xaml
@@ -10,7 +10,7 @@
             <RowDefinition Height="1*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="2*" />
-            <RowDefinition Height="10" />
+            <RowDefinition Height="20" />
                 <RowDefinition Height="30" />
         </Grid.RowDefinitions>
             <Grid.ColumnDefinitions >
@@ -19,12 +19,19 @@
                 <ColumnDefinition Width="120" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-        <Image VerticalOptions="StartAndExpand" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalOptions="Center"  HeightRequest="90"  Source="LogoOmal" Margin="10"  />
-            <StackLayout Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" VerticalOptions="Fill" Orientation="Vertical" HorizontalOptions="Fill">
-                <Button HorizontalOptions="Fill" Text="VERSIONE ITALIANA" Clicked="Handle_Clicked_IT" />
-                <Button HorizontalOptions="Fill" Text="ENGLISH VERSION"  Clicked="Handle_Clicked_EN" />
+            <Image VerticalOptions="StartAndExpand" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalOptions="Center"  HeightRequest="90"  Source="LogoOmal" Margin="10"  />
+            <StackLayout x:Name="luca" IsVisible="{Binding IsRunningOrError, Converter={StaticResource InverseBooleanConverter}}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" VerticalOptions="Fill" Orientation="Vertical" HorizontalOptions="Fill">
+                <Button HorizontalOptions="Fill" Text="VERSIONE ITALIANA"   Command="{Binding LangItCommand}"  />
+                <Button HorizontalOptions="Fill" Text="ENGLISH VERSION"  Command="{Binding LangEnCommand}"  />
             </StackLayout>
-            <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" VerticalOptions="End" FontFamily="Montserrat-Regular" FontSize="10" TextColor="White" HorizontalOptions="Center" Text="2018 OMAL" />
+
+            <StackLayout Margin="5"  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" HorizontalOptions="Fill">
+                <ActivityIndicator IsVisible="{Binding IsRunning}" IsRunning="{Binding IsRunning}" />
+                <ProgressBar x:Name="PBar" IsVisible="{Binding IsRunning}" Progress="{Binding ProgressB}" />
+                <Label HorizontalOptions="Center" TextColor="Red" Text="{Binding ErroreTxt}" />
+                <Button HorizontalOptions="Center" IsEnabled="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}" Text="{Binding BtnRiprova, Converter={StaticResource UpperCaseConverter}}" Style="{StaticResource Azzurro}" Command="{Binding UpdateDbCommand}" IsVisible="{Binding Errore}" />
+            </StackLayout>
+            <Label HorizontalTextAlignment="Center" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" VerticalOptions="End" FontFamily="Montserrat-Regular" FontSize="10" TextColor="White" HorizontalOptions="Center" Text="2018 OMAL" />
         </Grid>
 	</ContentPage.Content>
 </CControls:CualevaGradientContentPage>
